--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -37,12 +37,12 @@
                       <i class="bi bi-heart fs-5 text-secondary"></i>
                     <% end %>
                   <% end %>
-                  <span class="ms-1 text-muted"><%= book.like_count %></span>
+                  <span class="ms-1 text-muted"><%= book.likes.count %></span>
                 </div>
               <% else %>
                 <div class="mb-3">
                   <i class="bi bi-heart text-muted fs-5"></i>
-                  <span class="ms-1 text-muted"><%= book.like_count %></span>
+                  <span class="ms-1 text-muted"><%= book.likes.count %></span>
                 </div>
               <% end %>
 
