--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -15,6 +15,16 @@
           <%= f.text_area :bio, class: "form-control", rows: 4 %>
         </div>
 
+        <div class="mb-3">
+          <%= f.label :location, class: "form-label" %>
+          <%= f.text_field :location, class: "form-control" %>
+        </div>
+
+        <div class="mb-3">
+          <%= f.label :goodreads_url, "Goodreads Profile URL", class: "form-label" %>
+          <%= f.url_field :goodreads_url, class: "form-control" %>
+        </div>
+
         <%= f.submit "Update Profile", class: "btn btn-success" %>
       <% end %>
     </div>
