--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -15,7 +15,7 @@
               </h5>
               <p class="card-text text-muted">
                 <i class="bi bi-person-lines-fill"></i> <strong>Author:</strong> <%= book.author %><br>
-                <i class="bi bi-hand-thumbs-up-fill text-danger"></i> <strong>Likes:</strong> <%= book.like_count %>
+                <i class="bi bi-hand-thumbs-up-fill text-danger"></i> <strong>Likes:</strong> <%= book.likes.count %>
               </p>
             </div>
             <div class="card-footer bg-light border-top-0 text-end">
