--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,24 +6,13 @@
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "application", media: "all" %>
     <%= javascript_include_tag "application", type: "module", defer: true %>
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
+    <!-- Bootstrap & Icons (ONLY ONCE) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-    <%= stylesheet_link_tag "https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css", crossorigin: "anonymous" %>
-    <%= javascript_include_tag "https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js", crossorigin: "anonymous" %>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    >
+
+    <!-- Optional Bootstrap JS (once) -->
+    <%= javascript_include_tag "https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js", crossorigin: "anonymous" %>
 
     <style>
       body {
@@ -63,24 +52,27 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarContent">
-          <% if logged_in? %>
+          <% if user_signed_in? %>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item"><%= link_to "Books", books_path, class: "nav-link" %></li>
               <li class="nav-item"><%= link_to "Genres", genres_path, class: "nav-link" %></li>
-              <li class="nav-item"><%= link_to "My Reviews", my_reviews_path, class: "nav-link" %></li>
+              <% if user_signed_in? && !current_user.moderator? %>
+  <li class="nav-item"><%= link_to "My Reviews", my_reviews_path, class: "nav-link" %></li>
+<% end %>
+
+            
               <li class="nav-item"><%= link_to "Edit Profile", edit_profile_path, class: "nav-link" %></li>
             </ul>
 
-           <span class="navbar-text text-white me-3">
-  Logged in as <strong><%= current_user.profile.name %></strong> (<%= current_user.role %>)
-</span>
+            <span class="navbar-text text-white me-3">
+              Logged in as <strong><%= current_user&.username || current_user.email %></strong> (<%= current_user.role %>)
+            </span>
 
-
-            <%= button_to "Logout", logout_path, method: :delete, class: "btn btn-outline-light" %>
+            <%= button_to "Logout", destroy_user_session_path, method: :delete, class: "btn btn-outline-light" %>
           <% else %>
             <ul class="navbar-nav ms-auto">
-              <li class="nav-item"><%= link_to "Login", login_path, class: "nav-link" %></li>
-              <li class="nav-item"><%= link_to "Sign up", signup_path, class: "nav-link" %></li>
+              <li class="nav-item"><%= link_to "Login", new_user_session_path, class: "nav-link" %></li>
+              <li class="nav-item"><%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %></li>
             </ul>
           <% end %>
         </div>
@@ -108,8 +100,5 @@
     <div class="container py-4">
       <%= yield %>
     </div>
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
