--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,10 +1,20 @@
 <div class="container mt-5">
-  <div class="d-flex justify-content-between align-items-center mb-4">
-    <h2 class="fw-bold">All Books</h2>
-    <% if moderator? %>
-      <%= link_to "Add Book", new_book_path, class: "btn btn-success" %>
-    <% end %>
-  </div>
+
+<div class="d-flex justify-content-between align-items-center mb-4">
+  <h2 class="fw-bold">All Books</h2>
+  <% if moderator? %>
+    <%= link_to "Add Book", new_book_path, class: "btn btn-success" %>
+  <% end %>
+</div>
+
+<div class="mb-4">
+  <%= form_with url: books_path, method: :get, local: true, class: "d-flex w-50" do %>
+    <%= text_field_tag :query, params[:query], placeholder: "Search by title or author", class: "form-control me-2" %>
+    <button type="submit" class="btn btn-outline-primary">
+      <i class="bi bi-search"></i> Search
+    </button>
+  <% end %>
+</div>
 
   <% if @books.present? %>
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
@@ -18,6 +28,11 @@
               </h4>
               <!-- Author -->
               <h6 class="card-subtitle mb-2 text-muted">Author: <%= book.author %></h6>
+             <!-- View Count -->
+<p class="text-muted mb-2">
+  <i class="bi bi-eye-fill text-primary"></i>
+  <%= pluralize(book.view_count, "Reads") %>
+</p>
 
               <!-- Like button and count -->
            <% if user_signed_in? && !current_user.moderator? %>
@@ -47,6 +62,23 @@
                   <span class="ms-1 text-muted"><%= book.likes.count %></span>
                 </div>
               <% end %>
+  <% if user_signed_in? && !current_user.moderator? %>
+          <% if current_user.wishlist_books.include?(book) %>
+            <% wishlist = current_user.wishlists.find_by(book_id: book.id) %>
+            <%= button_to wishlist_path(wishlist),
+                          method: :delete,
+                          class: "btn btn-outline-danger btn-sm w-100 mb-2" do %>
+              <i class="bi bi-bookmark-dash"></i> Remove from Wishlist
+            <% end %>
+          <% else %>
+            <%= button_to wishlists_path(book_id: book.id),
+                          method: :post,
+                          class: "btn btn-outline-primary btn-sm w-100 mb-2" do %>
+              <i class="bi bi-bookmark-plus"></i> Add to Wishlist
+            <% end %>
+          <% end %>
+        <% end %>
+
 
               <!-- Moderator actions -->
               <% if moderator? %>
