--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -30,4 +30,22 @@
   <div class="text-center mt-4">
     <%= button_to "Delete My Account", profile_path, method: :delete, data: { confirm: "Are you sure you want to permanently delete your account?" }, class: "btn btn-outline-danger" %>
   </div>
+
+  <hr class="my-5">
+<% if !moderator? %>
+<h4 class="text-success"><i class="bi bi-heart-fill me-1"></i> Your Liked Books</h4>
+
+<% if @liked_books.any?%>
+  <ul class="list-group">
+    <% @liked_books.each do |book| %>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        <%= link_to book.title, book_path(book), class: "text-decoration-none" %>
+        <span class="badge bg-secondary"><%= book.author %></span>
+      </li>
+    <% end %>
+  </ul>
+<% else %>
+  <p class="text-muted">You haven't liked any books yet.</p>
+<% end %>
+<% end %>
 </div>
