--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,8 @@
     <title>Book Review App</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= stylesheet_link_tag "application", media: "all" %>
-    <%= javascript_include_tag "application", type: "module", defer: true %>
+  <!--  <%= stylesheet_link_tag "application", media: "all" %>
+  <%= javascript_include_tag "application", type: "module", defer: true %> -->
 
     <!-- Bootstrap & Icons (ONLY ONCE) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -58,7 +58,8 @@
               <li class="nav-item"><%= link_to "Genres", genres_path, class: "nav-link" %></li>
               <% if user_signed_in? && !current_user.moderator? %>
   <li class="nav-item"><%= link_to "My Reviews", my_reviews_path, class: "nav-link" %></li>
-   <li class="nav-item"><%= link_to "My Wishlist", wishlists_path, class: "nav-link" %></li>
+  <li class="nav-item"> <%= link_to "My Wishlist", my_wishlist_path, class: "nav-link" %></li>
+
 
 
 <% end %>
